# nalab

./: .gitignore  Cargo.toml  report.typ  template.typ
src/: lib.rs  main.rs  task1.rs  task2.rs  task3.rs
