[package]
name = "nalab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#const_soft_float = { version = "0.1.3", features = ["const_trait_impl"] }
const_soft_float = { version = "0.1.3" }
nalgebra = { version = "0.32", features = ["rayon"] }
plotters = "0.3.4"
